--- a/SpaceInvaders-Godot-main/export_presets.cfg
+++ b/SpaceInvaders-Godot-main/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Drikas Invaders/Drikas-Invaders/godot-invaders.exe"
+export_path="../godot-invaders.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
